# spookshow

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  init.sh
examples/: main.cpp  object.hpp  object_mock.hpp
include/spookshow/: condition.hpp  expectation.hpp  expectation_order.hpp  macros.hpp  method.hpp  spookshow.hpp
src/: expectation.cpp  expectation_order.cpp  spookshow.cpp
tests/: condition_tests.cpp  expectation_order_tests.cpp  expectation_tests.cpp  main.cpp  method_tests.cpp  test_base.hpp
